@@ -165,7 +165,7 @@ class CachedStorageWrapper extends Storage {
                 }
 
                 // NOTE: queued updates are enabled only for locally cached keys
-                //       to simplify control of queue size. It still possible that
+                //       to simplify control of queue size. It's still possible that
                 //       there are many more pending updates than currently cached
                 //       keys.
                 const us = this[UPD_QUEUE].get( uuidb64 );
@@ -346,6 +346,7 @@ class CachedStorageWrapper extends Storage {
                         },
                         ( as, err ) => {
                             if ( err === 'UnknownKeyID' ) {
+                                this[KEY_CACHE].del( id );
                                 queue.delete( id );
                             } else {
                                 this.emit( 'workerError', err,
