@@ -1,6 +1,7 @@
 
 === (next) ===
 FIXED: use of SV_DEL instead of SV_NEW event type
+FIXED: to invalidate cache on stats update miss
 
 === 1.0.0 (2018-05-31) ===
 CHANGED: to use secure buffer comparison from SpecTools
